--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js, Inquirer, MySQL application to track staff & department information",
   "main": "index.js",
   "scripts": {
-    "test": "npm start"
+    "test": "node index.js"
   },
   "repository": {
     "type": "git",
