--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "employee-tracker",
   "version": "1.0.0",
   "description": "Node.js, Inquirer, MySQL application to track staff & department information",
-  "main": "mainMenu.js",
+  "main": "index.js",
   "scripts": {
-    "test": "node mainMenu.js"
+    "test": "node index.js"
   },
   "repository": {
     "type": "git",
