--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js, Inquirer, MySQL application to track staff & department information",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "node index.js",
+    "watch": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,8 @@
     "dotenv": "^16.0.3",
     "inquirer": "^8.2.4",
     "mysql2": "^3.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
